sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:20: error: not found: value aMixé
  } while (aMixé)
           ^