sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  
  do {
    
    var aMixé = false
    
    for (x <- 0 to getNombreValeurs()-2) {
      
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
      
    }
    
    for (x <- getNombreValeurs()-2 to 0 by -1) {
      
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
      
    }
    
  } while (aMixé)
  
}